--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title> Arquitetura CND </title>
+    <title>Arquitetura</title>
 </head>
 <body>
     <!-- MENU SUPERIOR -->
@@ -17,13 +17,16 @@
     <!-- MENU INFORMACIONAL -->
     <div id="menuinformacional">
         <div class="info">
-            <h1> 850 </h1> <p> empreendimentos construídos </p>
+            <h1>850</h1>
+            <p>empreendimentos construídos</p>
         </div>
         <div class="info">
-            <h1> 40 </h1> <p> anos de mercado e experiência </p>
+            <h1>40</h1>
+            <p>anos de mercado e experiência</p>
         </div>
         <div class="info">
-            <h1> 2,000,000 m² </h1> <p> em projetos construídos </p>
+            <h1>2,000,000 m²</h1>
+            <p>em projetos construídos</p>
         </div>
     </div>
 
