--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" type="imagex/png" href="/img/icon.png">
     <title>Arquitetura</title>
 </head>
 <body>
     <!-- MENU SUPERIOR -->
     <div id="menusuperior">
-    <h1 id="titulomenusuperior"> <br> <br> <br> Tradição em projetos de arquitetura </h1> <br>
-    <p id=textomenusuperior> Arquitetura residencial e comercial </p>
+        <h1 id="titulomenusuperior"> Tradição em projetos de arquitetura </h1>
+        <p id="textomenusuperior"> Arquitetura residencial e comercial </p>
     </div>
 
     <!-- MENU INFORMACIONAL -->
@@ -21,7 +22,7 @@
             <p>empreendimentos construídos</p>
         </div>
         <div class="info">
-            <h1>40</h1>
+            <h1>20</h1>
             <p>anos de mercado e experiência</p>
         </div>
         <div class="info">
@@ -33,15 +34,15 @@
     <!-- SEÇÃO de HISTÓRIA -->
     <div id="secaodehistoria">
         <div>
-           <div class="info2">
-                <h1 id="titulohistoria"> Arquitetos com História e Experiência. </h1> <br>
+            <div class="info2">
+                <h1 id="titulohistoria"> Arquitetos com História e Experiência. </h1>
             </div>
             <div class="info2">
                 <p id="textohistoria">
-                Nós realizamos desde 2002 projetos e gerenciamento de obras. <br>
-                Com mais de 800 projetos e 2.000.000 de m² construídos, tendo <br>
-                como principal proposta transformar em realidade os sonhos de <br>
-                seus clientes, criando projetos personalizados, unindo a tradição <br>
+                Nós realizamos desde 2002 projetos e gerenciamento de obras.
+                Com mais de 800 projetos e 2.000.000 de m² construídos, tendo
+                como principal proposta transformar em realidade os sonhos de
+                seus clientes, criando projetos personalizados, unindo a tradição
                 e a modernidade em nossos projetos.
                 </p>
             </div>
