--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="imagex/png" href="/img/icon.png">
+
     <title>Arquitetura</title>
+        <link rel="icon" href="img/icon.png" type="image/png">
+        
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- MENU SUPERIOR -->
-    <div id="menusuperior">
+    <header id="menusuperior">
         <h1 id="titulomenusuperior"> Tradição em projetos de arquitetura </h1>
         <p id="textomenusuperior"> Arquitetura residencial e comercial </p>
-    </div>
+    </header>
 
     <!-- MENU INFORMACIONAL -->
-    <div id="menuinformacional">
+    <section id="menuinformacional">
         <div class="info">
             <h1>850</h1>
             <p>empreendimentos construídos</p>
@@ -29,10 +31,10 @@
             <h1>2,000,000 m²</h1>
             <p>em projetos construídos</p>
         </div>
-    </div>
+    </section>
 
     <!-- SEÇÃO de HISTÓRIA -->
-    <div id="secaodehistoria">
+    <article id="secaodehistoria">
         <div>
             <div class="info2">
                 <h1 id="titulohistoria"> Arquitetos com História e Experiência. </h1>
@@ -47,11 +49,11 @@
                 </p>
             </div>
         </div>
-    <img src="IMG/casa.svg" id="imgcasa" alt="">
-    </div>
+        <img src="IMG/casa.svg" id="imgcasa" alt="">
+    </article>
 
     <!-- SEÇÃO de FORMULÁRIO -->
-    <div id="formulario">
+    <footer id="formulario">
         <h1 id="tituloformulario"> <br> <br> Conheça mais sobre nossos serviços: </h1> <br>
         <form action="https://api.sheetmonkey.io/form/uF7BZjQSorzopmEMZGysN7" method="post">
             <input type="text" placeholder="Nome" name="Nome Completo" required/> <br> <br> <br>
@@ -59,6 +61,6 @@
             <input type="hidden" name="Cadastrado em" value="x-sheetmonkey-current-date-time" />
             <button type="submit"> Fale Conosco </button>
         </form>
-    </div>
+    </footer>
 </body>
 </html>
